health-record-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-record-api-service
spec:
  type: LoadBalancer
  selector:
    app: health-record-api
  ports:
    - targetPort: 80
      port: 7005
