login-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: login-api-service
spec:
  type: LoadBalancer
  selector:
    app: login-api
  ports:
    - targetPort: 80
      port: 7002
