management-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: management-api-service
spec:
  type: LoadBalancer
  selector:
    app: management-api
  ports:
    - targetPort: 80
      port: 7001
