patientinfo-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patientinfo-api-service
spec:
  type: LoadBalancer
  selector:
    app: patientinfo-api
  ports:
    - targetPort: 80
      port: 7003
