allrgy-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allergy-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/Allergy/GetAllergies
        pathType: Prefix
        backend:
          service:
            name: allergy-api-service
            port:
              number: 7004
      - path: /api/Allergy/AddAllergy
        pathType: Prefix
        backend:
          service:
            name: allergy-api-service
            port:
              number: 7004
