login-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/PatientLogin/Get
        pathType: Prefix
        backend:
          service:
            name: login-api-service
            port:
              number: 7002
      - path: /api/PatientLogin/Add
        pathType: Prefix
        backend:
          service:
            name: login-api-service
            port:
              number: 7002
      - path: /api/PatientLogin/Update
        pathType: Prefix
        backend:
          service:
            name: login-api-service
            port:
              number: 7002
      - path: /api/PatientLogin/Delete
        pathType: Prefix
        backend:
          service:
            name: login-api-service
            port:
              number: 7002
