management-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/Doctor/getAllDoctor
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Doctor/byId
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Doctor/GetByEmail
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Doctor/addDoctor
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Doctor/deleteDoctor
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Nurse/getAllNurse
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Nurse/AddNurse
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
      - path: /api/Nurse/getByEmail
        pathType: Prefix
        backend:
          service:
            name: management-api-service
            port:
              number: 7001
